--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
                                                     <div class="testimonial-logo logo1">
                                                         <img src="assets/testimonial-logo1.png" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content1">
                                                         <p>I'm delighted to commend 9 Oceania for their exceptional work in performing competitive analysis and Google Ads campaigns. Their strategic approach led to a remarkable 150% increase in sales through PPC lead generation. We have optimised our online presence to effectively attract and convert potential clients.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating1">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -221,10 +221,10 @@
                                                     <div class="testimonial-logo logo2">
                                                         <img src="assets/testimonial-logo2.png" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content2">
                                                         <p>Their expertise in website development, social media management, and Google Ads has propelled our brand to new heights. Our online presence is now vibrant, engaging, and driving significant traffic and conversions. Thanks to 9 Oceania, we've expanded our reach and established a strong digital footprint in the competitive sweets market.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating2">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -238,10 +238,10 @@
                                                     <div class="testimonial-logo logo3">
                                                         <img src="assets/testimonial-logo3.svg" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content3">
                                                         <p>9 Oceania's seamless e-commerce website has left me incredibly impressed. Their team understood and translated our brand vision into a visually stunning and user-friendly platform. Since the website launch, we've experienced a surge in online sales.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating3">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -255,10 +255,10 @@
                                                     <div class="testimonial-logo logo4">
                                                         <img src="assets/testimonial-logo4.png" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content4">
                                                         <p>Their expert website development and integration with Shopify, as well as a strategic social media calendar for Instagram, have revolutionised our brand's online presence. We've witnessed a significant increase in website traffic.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating4">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -272,10 +272,10 @@
                                                     <div class="testimonial-logo logo5">
                                                         <img src="assets/testimonial-logo5.jpg" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content5">
                                                         <p>I'm grateful for the tremendous impact they had on our Instagram presence. Their content creation and CRM strategies have revitalised our social media presence, resulting in increased brand visibility and customer retention. Their approach has elevated our cafe's online persona, fostering a stronger connection with our audience and driving foot traffic to our establishment.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating5">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -292,7 +292,7 @@
                                                     <div class="testimonial-content small">
                                                         <p>Thank you, 9 Oceania, for sweetening our digital presence!"</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating6">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -306,10 +306,10 @@
                                                     <div class="testimonial-logo logo7">
                                                         <img src="assets/testimonial-logo7.png" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content7">
                                                         <p>As the visionary behind Kelyn Naturals, I'm thankful to the team at 9 Oceania for bringing our brand to life in the digital realm with appropriate SEO and SEM implementation. Their creation of our e-commerce website was not just a transaction; it was a collaborative journey towards success. The strategic guidance and meticulous attention to detail ensured a flawless launch, captivating our target audience and establishing Kelyn Naturals as a formidable player in the cosmetics industry.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating7">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -323,10 +323,10 @@
                                                     <div class="testimonial-logo logo8">
                                                         <img src="assets/testimonial-logo8.jpg" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content8">
                                                         <p>I'm extremely grateful to 9 Oceania's team for their invaluable assistance in setting up our Instagram presence with creative content catalogues. Their expertise and dedication were evident from the outset, guiding us through the intricacies of social media with patience and precision. Thanks to 9 Oceania's support, we've embarked on a sweet journey of online engagement, captivating our audience one delectable post at a time.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating8">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -340,10 +340,10 @@
                                                     <div class="testimonial-logo logo9">
                                                         <img src="assets/testimonial-logo9.png" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content9">
                                                         <p>Their work in website development and social media management has transformed our online presence, creating a virtual oasis for dessert enthusiasts. With influencer visits, paid ad campaigns, and regular content creation, we've cultivated an online community as vibrant and enticing as our dessert menu, enticing customers to savour every moment of their Big Chill experience.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating9">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
@@ -357,10 +357,10 @@
                                                     <div class="testimonial-logo logo10">
                                                         <img src="assets/testimonial-logo10.jpg" alt="">
                                                     </div>
-                                                    <div class="testimonial-content">
+                                                    <div class="testimonial-content content10">
                                                         <p>Our e-commerce website was holding us back, lagging behind competitors. Upon receiving a comprehensive website audit, we discovered numerous issues, particularly concerning keyword optimisation and WooCommerce integration. Thanks to their expertise, our WooCommerce implementation seamlessly integrated our cafe's offerings, making the user interface and experience easy and efficient, significantly enhancing customer convenience.</p>
                                                     </div>
-                                                    <div class="testimonial-ratings">
+                                                    <div class="testimonial-ratings rating10">
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
                                                         <i class="fa-solid fa-star"></i>
