--- a/services.html
+++ b/services.html
@@ -43,13 +43,13 @@
                 <nav id="header-main-menu">
                     <ul class="main-menu sm sm-clean">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a class="menu-list" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">About us</a>
+                            <a class="menu-list" href="about.html">About us</a>
                         </li>
                         <li class="dropdownbtn">
-                            <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
+                            <a class="menu-list" href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                             <div class="service-dropdown">
                                 <div class="service-list">
                                     <ul class="first">
@@ -80,13 +80,13 @@
                             </div>
                         </li>
                         <li>
-                            <a href="work.html">Our Work</a>
+                            <a class="menu-list" href="work.html">Our Work</a>
                         </li>
                         <li>
-                            <a href="insights.html">Insights</a>
+                            <a class="menu-list" href="insights.html">Insights</a>
                         </li>
                         <li>
-                            <a href="career.html">Careers</a>
+                            <a class="menu-list" href="career.html">Careers</a>
                         </li>
                     </ul>
                 </nav>       
@@ -120,16 +120,13 @@
                 <div class="services-wrapper">
                     <section class="services-main">
                         <div class="services">
-                            <h2 class="services-heading">Services</h2>
+                            <!-- <h2 class="services-heading">Services</h2>
                             <div class="service-motto">
                                 <p>Choose growth. Choose impact. Choose us.</p>
-                            </div>
-<<<<<<< HEAD
-                            <!-- <div class="service-img">
-                                <img src="assets/Servcie font.svg" alt="">
                             </div> -->
-=======
->>>>>>> 939af430ebb976349c27028aa91e53abba7e1696
+                            <div class="service-img">
+                                <img src="assets/Servcie font.svg" alt="">
+                            </div>
                             <ul class="service-main-list">
                                 <li><a href="#creative-services">Creative</a></li>
                                 <li><a href="#dev-services">Web <br> Development</a></li>
