--- a/about.html
+++ b/about.html
@@ -39,13 +39,13 @@
                     <nav id="header-main-menu">
                         <ul class="main-menu sm sm-clean">
                             <li>
-                                <a href="index.html">Home</a>
+                                <a class="menu-list" href="index.html">Home</a>
                             </li>
                             <li>
-                                <a href="about.html">About us</a>
+                                <a class="menu-list" href="about.html">About us</a>
                             </li>
                             <li class="dropdownbtn">
-                                <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
+                                <a class="menu-list" href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                                 <div class="service-dropdown">
                                     <div class="service-list">
                                         <ul class="first">
@@ -76,13 +76,13 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="work.html">Our Work</a>
+                                <a class="menu-list" href="work.html">Our Work</a>
                             </li>
                             <li>
-                                <a href="insights.html">Insights</a>
+                                <a class="menu-list" href="insights.html">Insights</a>
                             </li>
                             <li>
-                                <a href="career.html">Careers</a>
+                                <a class="menu-list" href="career.html">Careers</a>
                             </li>
                         </ul>
                     </nav>       
