--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9Oceania | Expression of interest</title>
+    <title>9Oceania | WooCommerce</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="Template by CocoBasic" />
     <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -41,13 +41,13 @@
                 <nav id="header-main-menu">
                     <ul class="main-menu sm sm-clean">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a class="menu-list" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">About us</a>
+                            <a class="menu-list" href="about.html">About us</a>
                         </li>
                         <li class="dropdownbtn">
-                            <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
+                            <a class="menu-list" href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                             <div class="service-dropdown">
                                 <div class="service-list">
                                     <ul class="first">
@@ -78,13 +78,13 @@
                             </div>
                         </li>
                         <li>
-                            <a href="work.html">Our Work</a>
+                            <a class="menu-list" href="work.html">Our Work</a>
                         </li>
                         <li>
-                            <a href="insights.html">Insights</a>
+                            <a class="menu-list" href="insights.html">Insights</a>
                         </li>
                         <li>
-                            <a href="career.html">Careers</a>
+                            <a class="menu-list" href="career.html">Careers</a>
                         </li>
                     </ul>
                 </nav>       
@@ -114,27 +114,76 @@
                 </a>
             </div> 
             
-            <div class="contact-container contact-career">
-                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                    <div class="contact-title">
-                        <h2>Expression of Interest</h2>
-                        <hr>
+            <div class="container">
+                <div class="content-wrapper">
+                    <section class="services-part woocommerce">
+                        <div class="service woocommerce">
+                            <div class="service-heading">Services</div>
+                            <div class="service-name">WooCommerce</div>
+                        </div>
+                        <div class="service-description woocommerce">
+                            <div class="description-title">Why WooCommerce?</div>
+                            <p class="description-content">With our WooCommerce-powered store, we bring you a curated selection of premium products that elevate your lifestyle. From fashion-forward apparel to cutting-edge electronics, our diverse range caters to every taste and need. Our user-friendly interface ensures hassle-free browsing and secure transactions, while our commitment to quality guarantees satisfaction with every purchase. Join us today and experience the ease of online shopping at its finest.
+                            Contact 9 Oceania today, and let us show you how our WooCommerce expertise can transform your digital strategy..</p>
+                        </div>
+                        <div class="service-expertise woocommerce">
+                            <div class="expertise-title">WooCommerce Solutions</div>
+                            <ul>
+                                <li><a href="#">WooCommerce Store Setup: <span>Launch your online retail presence with a powerful WooCommerce platform, tailored to support your growth and scalability needs.</span></a></li>
+                                <li><a href="#">WooCommerce Customization Services: <span>Modify and enhance your WooCommerce store with custom features that cater specifically to your business requirements and customer preferences.</span></a></li>
+                                <li><a href="#">WooCommerce SEO Services: <span>Increase your store’s search engine visibility and drive sales with our specialized WooCommerce SEO techniques.</span></a></li>
+                            </ul>
+                        </div>
+                        <div class="service-choose woocommerce">
+                            <div class="choose-title">Why Choose Us?</div>
+                            <ul>
+                                <li><a href="#">E-commerce Functionality: <span>With WooCommerce, you get a feature-rich e-commerce platform that seamlessly integrates with WordPress, providing powerful tools for managing products, inventory, orders, and more. Our WooCommerce websites are built to handle the demands of online selling, empowering you to grow your business with ease.</span></a></li>
+                                <li><a href="#">Customization Flexibility: <span>We understand that every business is unique. That's why our WooCommerce websites offer unparalleled customization options, allowing you to tailor your online store to match your brand identity and business goals. Whether you need custom themes, plugins, or functionalities, we have the expertise to make it happen.</span></a></li>
+                                <li><a href="#">SEO Optimization: <span> Search engine visibility is essential for driving organic traffic to your website. Our WooCommerce websites are built with SEO best practices in mind, including clean code, fast loading times, and optimized metadata, to help you rank higher in search engine results and attract more visitors to your site.</span></a></li>
+                                <li><a href="#">Mobile Responsiveness: <span>With more and more users browsing the web on smartphones and tablets, it's crucial to have a website that looks great and functions flawlessly on all devices. Our WooCommerce websites are fully responsive, ensuring a seamless browsing experience for users on any screen size.</span></a></li>
+                                <li><a href="#">Security and Reliability: <span>Security is paramount in e-commerce. With WooCommerce, you can rest easy knowing that your website is hosted on a secure and reliable platform. We implement best-in-class security measures, including SSL encryption, regular security updates, and PCI compliance, to keep your customers' data safe and secure.</span></a></li>
+                            </ul>
+                        </div>
+                    </section>
+                    <div class="contact-copyright copyright-section">
+                        <div class="logo-contact">
+                            <div class="logo">
+                                <img src="assets//lands logo.png" alt="">
+                            </div>
+                            <div class="motto">
+                                <h3>Beyond Boundaries. Above Trends</h3>
+                            </div>
+                            <div class="contact-container">
+                                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                                    <input type="hidden" name="access_key" value="917e678c-2463-4b38-86da-490454b5a5af">
+                                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+                                    <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
+                                    <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
+                                    <textarea name="message" placeholder="Your Message" class="contact-inputs textarea" required></textarea>
+                                    <button type="submit">Contact Us</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="contact-details">
+                            <div class="contact-num">
+                                <a href="tel:+61 451645561" class="contact-phone"><i class="fa-solid fa-phone"></i>+61 451645561</a>
+                                <a href="tel:+61 433863895" class="contact-phone">+61 433863895</a>
+                            </div>
+                            <div class="contact-mails">
+                                <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                <a href="mailto: admin@9oceania.com" class="contact-mail">admin@9oceania.com</a>
+                            </div>
+                            <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
+                        </div>
+                        <div class="copyright">
+                            <p>All rights reserved, All wrongs reversed.</p>
+                        </div>
                     </div>
-                    <input type="hidden" name="access_key" value="917e678c-2463-4b38-86da-490454b5a5af">
-                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
-                    <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
-                    <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
-                    <textarea name="message" placeholder="Your Message" class="contact-inputs textarea" required></textarea>
-                    <label for="resume">Upload your resume</label>
-                    <input type="file" name="attachment" id="attachment" class="contact-inputs" accept=".pdf" required>
-                    <label for="resume">Upload your cover letter</label>
-                    <input type="file" name="attachment" id="attachment" class="contact-inputs" accept=".pdf" required>
-                    <button type="submit">Submit</button>
-                </form>
+                </div>
             </div>
 
         </div>
-
+        
     </div>
 
         <!--Load JavaScript-->
