--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                                 <div class="page">
                                                     <div class="testimonial-logo logo3">
                                                         <a href="https://www.auricnow.com/" target="_blank"><img src="assets/testimonial-logo3.svg" alt="">
-                                                            <div class="brand-name">Auric</div></a>
+                                                            <div class="brand-name">Auric Essentials</div></a>
                                                         </a>
                                                     </div>
                                                     <div class="testimonial-content content3">
@@ -298,7 +298,7 @@
                                                 <div class="page">
                                                     <div class="testimonial-logo logo6">
                                                         <a href="https://www.nikbakers.com/" target="_blank"><img src="assets/testimonial-logo6.png" alt="">
-                                                            <div class="brand-name">Nik Bakers</div>
+                                                            <div class="brand-name">Nik Baker’s</div>
                                                         </a>
                                                     </div>
                                                     <div class="testimonial-content small">
@@ -336,7 +336,7 @@
                                                 <div class="page">
                                                     <div class="testimonial-logo logo8">
                                                         <a href="https://theobroma.in/" target="_blank"><img src="assets/testimonial-logo8.jpg" alt="">
-                                                            <div class="brand-name">The Obroma</div></a>
+                                                            <div class="brand-name">Theobroma</div></a>
                                                     </div>
                                                     <div class="testimonial-content content8">
                                                         <p>I'm extremely grateful to 9 Oceania's team for their invaluable assistance in setting up our Instagram presence with creative content catalogues. Their expertise and dedication were evident from the outset, guiding us through the intricacies of social media with patience and precision. Thanks to 9 Oceania's support, we've embarked on a sweet journey of online engagement, captivating our audience one delectable post at a time.</p>
@@ -354,7 +354,7 @@
                                                 <div class="page">
                                                     <div class="testimonial-logo logo9">
                                                         <a href="https://www.thebigchillonline.com/" target="_blank"><img src="assets/testimonial-logo9.png" alt="">
-                                                            <div class="brand-name">The Big Chill</div>
+                                                            <div class="brand-name">The Big Chill Cafe</div>
                                                         </a>
                                                     </div>
                                                     <div class="testimonial-content content9">
